* https://repose.atlassian.net/browse/REP-5326[REP-5326] - Removed the deprecated via attribute from the <<../architecture/container.adoc#, Container configuration>>.
* https://repose.atlassian.net/browse/REP-7338[REP-7338] - The WAR deployment was removed as an option.

== 8.10.0.0 (2018-08-27)
* https://repose.atlassian.net/browse/REP-6969[REP-6969] - Added support for more expressive filter determination in the <<../architecture/system-model.adoc#,System Model>> using boolean operators.
* https://repose.atlassian.net/browse/REP-7135[REP-7135] - Improved the artifact deployment strategy to handle multiple *Repose* instances running concurrently.
* https://repose.atlassian.net/browse/REP-7096[REP-7096] - Updated the `ReposeRoutingServlet` to be able to actually route requests.
* https://repose.atlassian.net/browse/REP-7128[REP-7128] - Updated the performance tests so that they have a more standard layout, and more fully allow integration in the IDE.
* https://repose.atlassian.net/browse/REP-7009[REP-7009] - Updated the `intrafilter-logging` debugging mechanism in preparation for v9.0.0.0 changes.

== 8.9.1.0 (2018-07-03)
* https://repose.atlassian.net/browse/REP-7004[REP-7004] - Fixed a bug in the <<../filters/keystone-v2-basic-auth.adoc#, Keystone v2 Basic Auth>>, <<../filters/keystone-v2.adoc#, Keystone v2>>, <<../filters/openstack-identity-v3.adoc#, Openstack Identity v3>>, and <<../filters/valkyrie-authorization.adoc#, Valkyrie Authorization>> filters where headers were potentially processed in a case sensitive way.
* https://repose.atlassian.net/browse/REP-6038[REP-6038] - Created the `ReposeFilterChain` this will eventually replace the `PowerFilterChain` and allow dynamic determination of the filter chain.
* https://repose.atlassian.net/browse/REP-7008[REP-7008] - Created the `ReposeServlet` which will eventually replace the `EmptyServlet` and allow routing to be done by the servlet rather than the filter chain.